# ReconocimientoFisuras

./: .gitignore  README.md  READ_MLP_TORCH_sin_librerias.md
.github/workflows/: Instalar Opencv.txt
data/: DATASETS.md  SegmentationData.md
docs/: CMake.md  CVN_CementTrainer2-GPU.md  CommandLineArguments.md  Driversync.md  Environment.md  GPU.md  GoogleColab.md  Instalar Opencv-Linux.md  PrecompiledHeaders.md  gitignore.md
docs/CVNet_CementTrainer/: ErrorMalloc.md  GPU Error.md  Performance CPU-GPU.md  TensorLayers.md
docs/CVNet_CementTrainer/PerformanceTest/: CVNetCT_Win10_ORI_64x64_075_10.txt  CVNetC_Win10_ORI_32x32_015_10.txt  CVNetC_Win10_ORI_64x64_015_10.txt  CVNetC_Win10_ORI_64x64_075_10.txt  CVNetCe_Win10_ORI_64x64_075_10.txt  CVNetCe_Win10_ORI_64x64_075_10_t.txt  CVNetCe_Win10_ORI_64x64_075_10_t2.txt  DatasetB_Win10_DSB_64x64_075.txt  Training_Colab_DSB_64x64_075_01.txt  Training_Colab_DSB_64x64_075_10.txt  Training_Colab_DSB_64x64_075_20.txt  Training_Colab_ORI_64x64_075_01.txt  Training_Colab_ORI_64x64_075_10.txt  Training_Linux_DSB_64x64_075_01.txt  Training_Linux_ORI_64x64_075_10.txt  Training_Win10_DSB_64x64_075_01.txt  Training_Win10_DSB_64x64_075_10.txt  Training_Win10_ORI_32x32_015_01.txt  Training_Win10_ORI_64x64_075_10.txt  Training_Win10_ORI_64x64_075_10T.txt
docs/feedback/: Reunión AeroPlata.docx  pytorch_install-GoogleColab.md  pytorch_install.md
docs/github/: GIT-NewBranch.md  GIT-Remote-Branches.md  GIT-Rervert.md  GIT-install.md  GIT-secuencia-comandos.md  GitHub.odt  Markdown format (MD).md  README.md  Workflow.md  example.gitignore  example1.gitignore  example2.gitignore  install.md  new_branch.md  secuencia-comandos.md  secuencia-comandos.txt
docs/opencv/: Instalacion OpenCV-Linux.md  OpenCV-Install-GoogleColab.md  OpenCV-Install-Linux.log.md  OpenCV-Install-Linux.md  OpenCV-Install.md  README.md
docs/torch/: torch-CPP.md  torch-env.md  torch-install-GoogleColab.md
docs/training/: README.md
src/: Fisuras (version inicial de martín).rar  READ.md  README.md  index.md  torch-test.md
src/Fisuras/: Fisuras.sln  Read.md  limpiar.cmd
src/Fisuras/CVNet_Cement/: CVNet_Cement.cpp  CVNet_Cement.vcxproj  CVNet_Cement.vcxproj.filters  Cement.cpp  Cement.h  model.pt
src/Fisuras/CVNet_CementTrainer/: CVNet_Cement2.vcxproj  CVNet_Cement2.vcxproj.filters  CVNet_CementTrainer.cpp
src/Fisuras/CVNet_CementTrainer2/: CMakeLists (otra copia).txt  CMakeLists.txt  CVNet_CementTrainer2.cpp  CVNet_CementTrainer2.vcxproj  CVNet_CementTrainer2.vcxproj.filters  CementTrainer.cpp  CementTrainer.h  Net.h  README.md  Tensor_utils.cpp  changelog.txt  cmdlineopt.cpp  cmdlineopt.h  logBuild001.txt  logCompileBuild001.html  pch.h  text.txt  todrive
src/Fisuras/CVNet_CementTrainer2/Backup/: CVNet_Cement.vcxproj
src/Fisuras/CVNet_DatasetBuilder/: CVNet_DatasetBuilder.cpp  CVNet_DatasetBuilder.vcxproj  CVNet_DatasetBuilder.vcxproj.filters  Cement.cpp  Cement.h  DataBuilder.cpp  DataBuilder.h  Dataset.cpp  Dataset.h  cmdlineopt.cpp  cmdlineopt.h  pch.h
src/Fisuras/CVNet_DatasetBuilder2/: CVNet_Cement.cpp  CVNet_Cement2.vcxproj  CVNet_Cement2.vcxproj.filters
src/Fisuras/CVNet_Trainer/: CMakeLists.txt  CVNet.h  CVNet_Trainer.cpp  CVNet_Trainer.vcxproj  CVNet_Trainer.vcxproj.filters  Tensor_utils.cpp  Tensor_utils.h  Trainer.cpp  Trainer.h  cmdlineopt.cpp  cmdlineopt.h  pch.h
src/Fisuras/MLP_TORCH_sin_librerias/: MLP_TORCH_sin_librerias.cpp  MLP_TORCH_sin_librerias.vcxproj  MLP_TORCH_sin_librerias.vcxproj.filters  c10.lib  caffe2_detectron_ops.lib  clog.lib  cpuinfo.lib
src/Fisuras/Segmentation/: CementDataset.cpp  CementDataset.h  Segmentation.vcxproj  Segmentation.vcxproj.filters  Serialize.h
src/Fisuras/Visualizacion_Fracturas/: Visualizacion_Fracturas.cpp
src/Fisuras/common/: globals.h
src/FisurasDivergencia/: README.md
src/FisurasDivergencia/CVNet_Cement/: CVNet_Cement.cpp  CVNet_Cement.vcxproj  Cement.cpp
src/FisurasDivergencia/CVNet_CementTrainer2/: CVNet_CementTrainer2.cpp  CVNet_CementTrainer2.vcxproj  CVNet_CementTrainer2.vcxproj.filters  CementTrainer.cpp  Net.h  Tensor_utils.cpp  Tensor_utils.h  TorchUtils.cpp  TorchUtils.h  pch.h
src/FisurasDivergencia/CVNet_DatasetBuilder/: CVNet_DatasetBuilder.cpp  CVNet_DatasetBuilder.vcxproj  CVNet_DatasetBuilder.vcxproj.filters  pch.h
src/FisurasDivergencia/Visualizacion_Fracturas/: Visualizacion_Fracturas.vcxproj  Visualizacion_Fracturas.vcxproj.filters  pch.h
src/FisurasDivergencia/common/: globals.cpp  globals.h
src/FisurasSegmentation/: Changelog-Anexos.md  Changelog.md  Fisuras.sln  README.md
src/FisurasSegmentation/Segmentation/: CementDataset.cpp  CementDataset.h  Config - Original.h  Config.h  ResNet18.cpp  Segmentation.cpp  Segmentation.vcxproj  Segmentation.vcxproj.filters  Serialize.cpp  Serialize.h  changelog.md.txt  pch.h  text.txt
src/FisurasSegmentation/SerializeMod/: Config.h  Serialize.cpp  Serialize.h  SerializeMod.cpp  SerializeMod.vcxproj  SerializeMod.vcxproj.filters  pch.h
src/FisurasSegmentation/TrainingMod/: CementDataset.cpp  CementDataset.h  Config.h  Net.h  Tiramisu.h  TrainingMod.cpp  TrainingMod.vcxproj  TrainingMod.vcxproj.filters  Visualize.h  pch.h
src/FisurasSegmentation/VisualizeMod/: Config.h  Tiramisu.h  Visualize.h  VisualizeMod.cpp  VisualizeMod.vcxproj  VisualizeMod.vcxproj.filters  pch.h
src/FisurasSegmentation/common/: globals.cpp
src/FisurasSegmentation/tensorfilesMod/: CementDataset.cpp  CementDataset.h  (+5 more)
src/FisurasVersionInicial/: Fisuras.sln
src/MNIST/: Fisuras.sln
src/clasificador/: clasificador.sln
src/opencv-test/: opencv-test.sln
src/oring-QA/: README.md
src/test/: README.md  index.md
src/test/CMake-test/example-app/: CMakeLists.txt  Changelog.md  GoogleColab.md  README.md  archadj.cpp  archadj.h  comandos.txt  example-app.cpp
src/test/Precompiled Headers/Precompiled Headers/: CMakeLists.txt  Main.cpp  Precompiled Headers.vcxproj  Precompiled Headers.vcxproj.filters  README.md  a.out  pch.h
src/test/opencv-test/Linux-Colab/opencv-test/: CMakeLists.txt  README.md  opencv-test.cpp
src/torch-test/: torch-test.sln
(+84 files in other folders)
